# bme-translate

./: .gitignore  README.md  index.js  manifest.json  package-lock.json  package.json  style.css
ena-planner/: ena-planner-presets.js  ena-planner-storage.js  ena-planner.css  ena-planner.html  ena-planner.js
graph/: graph-persistence.js  graph.js  knowledge-state.js  memory-scope.js  node-labels.js  schema.js  story-timeline.js  summary-state.js
host/: event-binding.js  runtime-host-adapter.js  st-context.js  st-native-render.js
lib/: dexie.min.js
llm/: llm-preset-utils.js  llm.js
maintenance/: chat-history.js  compressor.js  consolidator.js  extraction-context.js  extraction-controller.js  extractor.js  hierarchical-summary.js  smart-trigger.js  task-graph-stats.js
native/stbme-core/: Cargo.toml
native/stbme-core/src/: lib.rs
prompting/: default-task-profile-templates.js  injection-sanitizer.js  mvu-compat.js  prompt-builder.js  prompt-node-references.js  prompt-profiles.js  task-ejs.js  task-regex.js  task-worldinfo.js
retrieval/: diffusion.js  dynamics.js  injector.js  recall-controller.js  recall-persistence.js  retrieval-enhancer.js  retriever.js  shared-ranking.js
runtime/: debug-logging.js  generation-options.js  planner-tag-utils.js  request-timeout.js  runtime-debug.js  runtime-state.js  settings-defaults.js  user-alias-utils.js
scripts/: build-native-wasm.mjs  bump-manifest-version.mjs  check-syntax.mjs  run-test-suite.mjs
sync/: bme-chat-manager.js  bme-db.js  bme-opfs-store.js  bme-sync.js
tests/: chat-history.mjs  default-settings.mjs  (+63 more)
(+30 files in other folders)
